--- a/squares.yaml
+++ b/squares.yaml
@@ -4,123 +4,123 @@ channels:
   - r
   - defaults
 dependencies:
-  - _r-mutex=1.0.0=anacondar_1
-  - appnope=0.1.0=py37_0
-  - backcall=0.1.0=py37_0
-  - bwidget=1.9.11=1
-  - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2019.10.16=0
-  - cairo=1.14.12=hc4e6be7_4
-  - cctools=895=1
-  - certifi=2019.9.11=py37_0
-  - clang=4.0.1=1
-  - clang_osx-64=4.0.1=h1ce6c1d_18
-  - clangxx=4.0.1=1
-  - clangxx_osx-64=4.0.1=h22b1bf0_18
-  - click=7.0=py37_0
-  - compiler-rt=4.0.1=hcfea43d_1
-  - curl=7.67.0=ha441bb4_0
-  - decorator=4.4.1=py_0
-  - fontconfig=2.13.0=h5d5b041_1
-  - freetype=2.9.1=hb4e5f40_0
-  - fribidi=1.0.5=h1de35cc_0
-  - gettext=0.19.8.1=h15daf44_3
-  - gfortran_osx-64=4.8.5=h22b1bf0_8
-  - glib=2.63.1=hd977a24_0
-  - graphite2=1.3.13=h2098e52_0
-  - gsl=2.4=h1de35cc_4
-  - harfbuzz=1.8.8=hb8d4a28_0
-  - icu=58.2=h4b95b61_1
-  - ipykernel=5.1.3=py37h39e3cac_0
-  - ipython=7.9.0=py37h39e3cac_0
-  - ipython_genutils=0.2.0=py37_0
-  - jedi=0.15.1=py37_0
-  - jinja2=2.10.3=py_0
-  - jpeg=9b=he5867d9_2
-  - jupyter_client=5.3.4=py37_0
-  - jupyter_core=4.6.1=py37_0
-  - krb5=1.16.1=hddcf347_7
-  - ld64=274.2=1
-  - libcurl=7.67.0=h051b688_0
-  - libcxx=4.0.1=hcfea43d_1
-  - libcxxabi=4.0.1=hcfea43d_1
-  - libedit=3.1.20181209=hb402a30_0
-  - libffi=3.2.1=h475c297_4
-  - libgfortran=3.0.1=h93005f0_2
-  - libiconv=1.15=hdd342a3_7
-  - libpng=1.6.37=ha441bb4_0
-  - libsodium=1.0.16=h3efe00b_0
-  - libssh2=1.8.2=ha12b0ac_0
-  - libtiff=4.1.0=hcb84e12_0
-  - libxml2=2.9.9=hf6e021a_1
-  - llvm=4.0.1=1
-  - llvm-lto-tapi=4.0.1=1
-  - llvm-openmp=4.0.1=hcfea43d_1
-  - make=4.2.1=h3efe00b_1
-  - markupsafe=1.1.1=py37h1de35cc_0
-  - ncurses=6.1=h0a44026_1
-  - openssl=1.1.1d=h1de35cc_3
-  - pango=1.42.4=h060686c_0
-  - parso=0.5.1=py_0
-  - pcre=8.43=h0a44026_0
-  - pexpect=4.7.0=py37_0
-  - pickleshare=0.7.5=py37_0
-  - pip=19.3.1=py37_0
-  - pixman=0.38.0=h1de35cc_0
-  - prompt_toolkit=3.0.0=py_0
-  - ptyprocess=0.6.0=py37_0
-  - pygments=2.4.2=py_0
-  - python=3.7.5=h359304d_0
-  - python-dateutil=2.8.1=py_0
-  - pyzmq=18.1.0=py37h0a44026_0
-  - r-assertthat=0.2.1=r36h6115d3f_0
-  - r-base=3.6.1=hcb44179_1
-  - r-bh=1.69.0_1=r36h6115d3f_0
-  - r-bit=1.1_14=r36h46e59ec_0
-  - r-bit64=0.9_7=r36h46e59ec_0
-  - r-blob=1.1.1=r36h6115d3f_0
-  - r-cli=1.1.0=r36h6115d3f_0
-  - r-crayon=1.3.4=r36h6115d3f_0
-  - r-dbi=1.0.0=r36h6115d3f_0
-  - r-dbplyr=1.4.0=r36h6115d3f_0
-  - r-digest=0.6.18=r36h46e59ec_0
-  - r-dplyr=0.8.0.1=r36h466af19_0
-  - r-fansi=0.4.0=r36h46e59ec_0
-  - r-glue=1.3.1=r36h46e59ec_0
-  - r-magrittr=1.5=r36h6115d3f_4
-  - r-memoise=1.1.0=r36h6115d3f_0
-  - r-pillar=1.3.1=r36h6115d3f_0
-  - r-pkgconfig=2.0.2=r36h6115d3f_0
-  - r-plogr=0.2.0=r36h6115d3f_0
-  - r-prettyunits=1.0.2=r36h6115d3f_0
-  - r-purrr=0.3.2=r36h46e59ec_0
-  - r-r6=2.4.0=r36h6115d3f_0
-  - r-rcpp=1.0.1=r36h466af19_0
-  - r-rlang=0.3.4=r36h46e59ec_0
-  - r-rsqlite=2.1.1=r36h466af19_0
-  - r-stringi=1.4.3=r36h466af19_0
-  - r-stringr=1.4.0=r36h6115d3f_0
-  - r-tibble=2.1.1=r36h46e59ec_0
-  - r-tidyr=0.8.3=r36h466af19_0
-  - r-tidyselect=0.2.5=r36h466af19_0
-  - r-utf8=1.1.4=r36h46e59ec_0
-  - readline=7.0=h1de35cc_5
-  - rpy2=2.9.4=py37r36h1d22016_0
-  - setuptools=42.0.1=py37_0
-  - sexpdata=0.0.3=py_0
-  - six=1.13.0=py37_0
-  - sqlite=3.30.1=ha441bb4_0
-  - sqlparse=0.3.0=py_0
-  - tk=8.6.8=ha441bb4_0
-  - tktable=2.10=h1de35cc_0
-  - tornado=6.0.3=py37h1de35cc_0
-  - traitlets=4.3.3=py37_0
-  - wcwidth=0.1.7=py37_0
-  - wheel=0.33.6=py37_0
-  - xz=5.2.4=h1de35cc_4
-  - zeromq=4.3.1=h0a44026_3
-  - zlib=1.2.11=h1de35cc_3
-  - zstd=1.3.7=h5bba6e5_0
+  - _r-mutex=1.0.0
+  - appnope=0.1.0
+  - backcall=0.1.0
+  - bwidget=1.9.11
+  - bzip2=1.0.8
+  - ca-certificates=2019.10.16
+  - cairo=1.14.12
+  - cctools=895
+  - certifi=2019.9.11
+  - clang=4.0.1
+  - clang_osx-64=4.0.1
+  - clangxx=4.0.1
+  - clangxx_osx-64=4.0.1
+  - click=7.0
+  - compiler-rt=4.0.1
+  - curl=7.67.0
+  - decorator=4.4.1
+  - fontconfig=2.13.0
+  - freetype=2.9.1
+  - fribidi=1.0.5
+  - gettext=0.19.8.1
+  - gfortran_osx-64=4.8.5
+  - glib=2.63.1
+  - graphite2=1.3.13
+  - gsl=2.4
+  - harfbuzz=1.8.8
+  - icu=58.2
+  - ipykernel=5.1.3
+  - ipython=7.9.0
+  - ipython_genutils=0.2.0
+  - jedi=0.15.1
+  - jinja2=2.10.3
+  - jpeg=9b
+  - jupyter_client=5.3.4
+  - jupyter_core=4.6.1
+  - krb5=1.16.1
+  - ld64=274.2
+  - libcurl=7.67.0
+  - libcxx=4.0.1
+  - libcxxabi=4.0.1
+  - libedit=3.1.20181209
+  - libffi=3.2.1
+  - libgfortran=3.0.1
+  - libiconv=1.15
+  - libpng=1.6.37
+  - libsodium=1.0.16
+  - libssh2=1.8.2
+  - libtiff=4.1.0
+  - libxml2=2.9.9
+  - llvm=4.0.1
+  - llvm-lto-tapi=4.0.1
+  - llvm-openmp=4.0.1
+  - make=4.2.1
+  - markupsafe=1.1.1
+  - ncurses=6.1
+  - openssl=1.1.1d
+  - pango=1.42.4
+  - parso=0.5.1
+  - pcre=8.43
+  - pexpect=4.7.0
+  - pickleshare=0.7.5
+  - pip=19.3.1
+  - pixman=0.38.0
+  - prompt_toolkit=3.0.0
+  - ptyprocess=0.6.0
+  - pygments=2.4.2
+  - python=3.7.5
+  - python-dateutil=2.8.1
+  - pyzmq=18.1.0
+  - r-assertthat=0.2.1
+  - r-base=3.6.1
+  - r-bh=1.69.0_1
+  - r-bit=1.1_14
+  - r-bit64=0.9_7
+  - r-blob=1.1.1
+  - r-cli=1.1.0
+  - r-crayon=1.3.4
+  - r-dbi=1.0.0
+  - r-dbplyr=1.4.0
+  - r-digest=0.6.18
+  - r-dplyr=0.8.0.1
+  - r-fansi=0.4.0
+  - r-glue=1.3.1
+  - r-magrittr=1.5
+  - r-memoise=1.1.0
+  - r-pillar=1.3.1
+  - r-pkgconfig=2.0.2
+  - r-plogr=0.2.0
+  - r-prettyunits=1.0.2
+  - r-purrr=0.3.2
+  - r-r6=2.4.0
+  - r-rcpp=1.0.1
+  - r-rlang=0.3.4
+  - r-rsqlite=2.1.1
+  - r-stringi=1.4.3
+  - r-stringr=1.4.0
+  - r-tibble=2.1.1
+  - r-tidyr=0.8.3
+  - r-tidyselect=0.2.5
+  - r-utf8=1.1.4
+  - readline=7.0
+  - rpy2=2.9.4
+  - setuptools=42.0.1
+  - sexpdata=0.0.3
+  - six=1.13.0
+  - sqlite=3.30.1
+  - sqlparse=0.3.0
+  - tk=8.6.8
+  - tktable=2.10
+  - tornado=6.0.3
+  - traitlets=4.3.3
+  - wcwidth=0.1.7
+  - wheel=0.33.6
+  - xz=5.2.4
+  - zeromq=4.3.1
+  - zlib=1.2.11
+  - zstd=1.3.7
   - pip:
     - z3-solver==4.8.7.0
 prefix: /Users/pmorvalho/opt/miniconda3/envs/squares
