--- a/squares.yaml
+++ b/squares.yaml
@@ -5,27 +5,27 @@ channels:
   - defaults
 dependencies:
   - _r-mutex=1.0.0
-  - appnope=0.1.0
+  #- appnope=0.1.0
   - backcall=0.1.0
   - bwidget=1.9.11
   - bzip2=1.0.8
   - ca-certificates=2019.10.16
   - cairo=1.14.12
-  - cctools=895
+  #- cctools=895
   - certifi=2019.9.11
-  - clang=4.0.1
-  - clang_osx-64=4.0.1
-  - clangxx=4.0.1
-  - clangxx_osx-64=4.0.1
+  #- clang=4.0.1
+  #- clang_osx-64=4.0.1
+  #- clangxx=4.0.1
+  #- clangxx_osx-64=4.0.1
   - click=7.0
-  - compiler-rt=4.0.1
+  #- compiler-rt=4.0.1
   - curl=7.67.0
   - decorator=4.4.1
   - fontconfig=2.13.0
   - freetype=2.9.1
   - fribidi=1.0.5
   - gettext=0.19.8.1
-  - gfortran_osx-64=4.8.5
+  #- gfortran_osx-64=4.8.5
   - glib=2.63.1
   - graphite2=1.3.13
   - gsl=2.4
@@ -40,22 +40,22 @@ dependencies:
   - jupyter_client=5.3.4
   - jupyter_core=4.6.1
   - krb5=1.16.1
-  - ld64=274.2
+  #- ld64=274.2
   - libcurl=7.67.0
-  - libcxx=4.0.1
-  - libcxxabi=4.0.1
+  #- libcxx=4.0.1
+  #- libcxxabi=4.0.1
   - libedit=3.1.20181209
   - libffi=3.2.1
-  - libgfortran=3.0.1
+  #- libgfortran=3.0.1
   - libiconv=1.15
   - libpng=1.6.37
   - libsodium=1.0.16
   - libssh2=1.8.2
   - libtiff=4.1.0
   - libxml2=2.9.9
-  - llvm=4.0.1
-  - llvm-lto-tapi=4.0.1
-  - llvm-openmp=4.0.1
+  #- llvm=4.0.1
+  #- llvm-lto-tapi=4.0.1
+  #- llvm-openmp=4.0.1
   - make=4.2.1
   - markupsafe=1.1.1
   - ncurses=6.1
@@ -70,7 +70,7 @@ dependencies:
   - prompt_toolkit=3.0.0
   - ptyprocess=0.6.0
   - pygments=2.4.2
-  - python=3.7.5
+  - python=3.6.9
   - python-dateutil=2.8.1
   - pyzmq=18.1.0
   - r-assertthat=0.2.1
